projectRestore, fix in delete and docs updated
